--- a/src/module/search/search.html
+++ b/src/module/search/search.html
@@ -1,33 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>search</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+	<meta charset="UTF-8">
+	<title>search</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+	<script type="text/javascript">
+		var rempx = document.documentElement.clientWidth / 7.5; //这里分母是设计稿尺寸除以100得出的
+		document.getElementsByTagName('html')[0].style.fontSize = rempx + "px";
+		//下面所有从设计稿量取的px，除以100就是得出的rem值
+	</script>
 </head>
 <body>
 	<app></app>
 </body>
-<script type="text/javascript">
-	var viewport = document.querySelector("meta[name=viewport]");
-	var winWidths=$(window).width();
-	var densityDpi=640/winWidths;
-	densityDpi= densityDpi>1?300*640*densityDpi/640:densityDpi;
-	if(isWeixin()){
-		viewport.setAttribute('content', 'width=640, target-densityDpi='+densityDpi);
-	}else{
-		viewport.setAttribute('content', 'width=640, user-scalable=no');
-		window.setTimeout(function(){
-			viewport.setAttribute('content', 'width=640, user-scalable=yes');
-		},1000);
-	}
-	function isWeixin(){
-		var ua = navigator.userAgent.toLowerCase();
-		if(ua.match(/MicroMessenger/i)=="micromessenger") {
-			return true;
-		} else {
-			return false;
-		}
-	}
-</script>
 </html>
