--- a/src/module/search/search.html
+++ b/src/module/search/search.html
@@ -10,7 +10,7 @@
 		//下面所有从设计稿量取的px，除以100就是得出的rem值
 	</script>
 </head>
-<body>
+<body style="background:#F0F2F5;margin: 0;">
 	<app></app>
 </body>
 </html>
